[Orchestrator] Update the Orchestrator workflow and expected return types to address the change in the Analyzer interface, adjust tests, fix tests naming convention - use given_when_then